Fix: fixed toolbar position on small screens

--- a/src/app/Examples/cdkDrag&Drop/cdkDrag&drop.component.scss
+++ b/src/app/Examples/cdkDrag&Drop/cdkDrag&drop.component.scss
@@ -43,3 +43,9 @@ mat-toolbar {
 ul {
   list-style: none;
 }
+
+@media screen and (max-width: 500px) {
+  mat-toolbar{
+    left: 65px
+  }
+}
